--- a/JavaPractice/Array/.gitignore
+++ b/JavaPractice/Array/.gitignore
@@ -1,1 +1,6 @@
 /DuplicatesInArray.class
+/DuplicateInStringArrays.class
+/GetDuplicateElement.class
+/FrequencyOfDuplicateElement.class
+/ArrayTest.class
+/ArrayToString.class
